# podao

./: .gitignore  LICENSE  README.md  pyproject.toml
src/podao/: cli.py  constant.py  main.py  util.py
test/podao/: test_project.py
